[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "SeqTools"
authors = [{ name = "Nicolas Granger", email = "nicolas.granger.m@gmail.com" }]
description = "A library for transparent transformation of indexable containers (lists, etc.)"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["mapping", "lazy", "delayed", "pipeline", "processing"]
license = { text = "Mozilla Public License 2.0 (MPL 2.0)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dynamic = ["version"]
dependencies = ["tblib", "threadpoolctl"]

[project.optional-dependencies]
tests = ["pytest", "pytest-timeout", "numpy", "pytest-coverage"]
documentation = [
    "sphinx",
    "furo",
    "ipython",
    "ipykernel",
    "nbconvert",
    "nbsphinx",
    "Pillow",
    "numpy",
]

[project.urls]
PyPi = "https://pypi.org/project/SeqTools"
Documentation = "http://seqtools-doc.readthedocs.io"
Repository = "https://github.com/nlgranger/SeqTools"

[tool.setuptools.packages.find]
include = ["seqtools*"]

[tool.setuptools_scm]

[tool.coverage.run]
source = ["seqtools"]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "raise ValueError",
    "raise TypeError",
    "@abstract",
    "logger.warning",
]

[tool.cibuildwheel]
build = "*"
skip = ["*musllinux*", "cp38-*", "pp*"]
archs = ["native"]
