[metadata]
name = SeqTools
version = attr: version.version
description = A library for transparent transformation of indexable containers (lists, etc.)
long_description = file: README.rst, LICENSE.txt
author = Nicolas Granger
author_email = nicolas.granger.m@gmail.com
keywords = mapping, lazy, delayed, pipeline, processing
license = Mozilla Public License 2.0 (MPL 2.0)
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[options]
packages = seqtools
install_requires =
    tblib
    future
    typing; python_version < "3.6"
    backports.weakref; python_version < "3"
    monotonic; python_version < "3"
    enum34; python_version < "3"
setup_requires=
    pytest-runner
tests_require =
    pytest
    pytest-timeout
    numpy

[aliases]
test = pytest

[options.package_data]
* = *.txt, *.rst

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests

[tox]
envlist = py{27,35,36,37},pypy3,doctest,coverage
skip_missing_interpreters = true

[testenv:pypy3]
basepython = pypy3

[testenv]
deps =
    pytest
    pytest-timeout
    pytest-cov
    numpy
    coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}
commands =
    pytest --cov="{envsitepackagesdir}/seqtools" --cov-config="{toxinidir}/setup.cfg" --cov-report= {posargs}

[testenv:doctest]
deps =
    nose
    sphinx
    ipython
    ipykernel
    nbconvert
    nbsphinx
    Pillow
    numpy
    scikit-learn
    scipy
commands =
    python -m sphinx -M doctest docs docs/_build

[testenv:coverage]
skip_install = True
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine --rcfile=setup.cfg {toxworkdir}
    coverage {posargs:report}

[coverage:paths]
source =
    seqtools
    {toxworkdir}/*/lib/python*/site-packages/seqtools

[coverage:report]
exclude_lines =
    raise AssertionError
    raise NotImplementedError

[pylint]
disable =
    too-many-instance-attributes,
    too-many-arguments,
    len-as-condition,
    inherit-non-class
good-names=
    i, j, k, ex, Run, _, x, f, a, b
output-format = colorized
