[metadata]
name = SeqTools
version = attr: version.version
description = A library for transparent transformation of indexable containers (lists, etc.)
long_description = file: README.rst, LICENSE.txt
author = Nicolas Granger
author_email = nicolas.granger.m@gmail.com
keywords = mapping, lazy, delayed, pipeline, processing
license = Mozilla Public License 2.0 (MPL 2.0)
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[tox]
envlist = py{35,36,37,38},pypy3,doctest,coverage

[testenv]
deps =
    pytest
    pytest-timeout
    pytest-cov
    numpy
    coverage
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage.{envname}
commands_pre=
    {envpython} {toxinidir}/setup.py build_ext --inplace
commands =
    pytest --cov="{envsitepackagesdir}/seqtools" --cov-config="{toxinidir}/setup.cfg" --cov-report= {posargs:tests}

[testenv:doctest]
deps =
    nose
    sphinx
    ipython
    ipykernel
    nbconvert
    nbsphinx
    Pillow
    numpy
    scikit-learn
    scipy
commands =
    python -m sphinx -M doctest docs docs/_build

[testenv:coverage]
skip_install = True
setenv =
    COVERAGE_FILE={toxworkdir}/.coverage
commands =
    coverage combine --rcfile=setup.cfg {toxworkdir}
    coverage {posargs:report}

[coverage:run]
concurrency = thread multiprocessing
parallel = True
source = seqtools

[coverage:paths]
source =
    seqtools
    .tox/*/lib/python*/site-packages/seqtools

[coverage:report]
exclude_lines =
    raise NotImplementedError