[metadata]
name = SeqTools
version = attr: version.version
description = A library for transparent transformation of indexable containers (lists, etc.)
url = https://github.com/nlgranger/SeqTools
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Nicolas Granger
author_email = nicolas.granger.m@gmail.com
keywords = mapping, lazy, delayed, pipeline, processing
license = Mozilla Public License 2.0 (MPL 2.0)
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers
    Intended Audience :: Science/Research

[tox]
envlist = py{35,36,37,38},pypy3,doctest,coverage

[testenv]
extras =
    tests
setenv =
    COVERAGE_RCFILE = {toxinidir}/setup.cfg
    COVERAGE_FILE = {toxworkdir}/.coverage.{envname}
commands_pre =
    {envpython} setup.py build_ext --inplace
commands =
    coverage run -m pytest {posargs:tests}

[testenv:doctest]
extras =
    tests
    documentation
passenv = HOME
commands =
    {envpython} -m sphinx -M doctest docs docs/_build

[testenv:coverage]
skip_install = True
deps =
    coverage
setenv =
    COVERAGE_RCFILE = {toxinidir}/setup.cfg
commands =
    coverage combine {toxworkdir}
    coverage {posargs:report}

[coverage:run]
parallel = True
concurrency =
    thread
    multiprocessing
source = seqtools

[coverage:paths]
source =
    seqtools
    .tox/*/lib/python*/site-packages/seqtools

[coverage:report]
exclude_lines =
    raise NotImplementedError
    raise ValueError
    @abstract